Reorder cards, add AI Initiatives, make Resources card full-width

--- a/index.html
+++ b/index.html
@@ -68,31 +68,7 @@
                 <h2>Quick Access</h2>
                 <p>Access the most important resources for MCSfMSC operations</p>
             </div>
-            <div class="card-grid four-col">
-                <a href="pages/issue-resolution.html" class="access-card">
-                    <div class="card-icon purple"><i class="fas fa-bug"></i></div>
-                    <div class="card-content">
-                        <h3>Issue Resolution</h3>
-                        <p>Troubleshoot and resolve security issues with guided playbooks and workflows</p>
-                        <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Ankit Varshney</span>
-                            <span><i class="fas fa-calendar"></i> Oct 31, 2025</span>
-                        </div>
-                    </div>
-                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
-                </a>
-                <a href="pages/playbooks.html" class="access-card">
-                    <div class="card-icon green"><i class="fas fa-book-open"></i></div>
-                    <div class="card-content">
-                        <h3>Playbooks, Decks, Videos & Training</h3>
-                        <p>MCS playbooks, presentation decks, and training videos for security services</p>
-                        <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Geordie McGarty</span>
-                            <span><i class="fas fa-calendar"></i> Dec 2, 2024</span>
-                        </div>
-                    </div>
-                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
-                </a>
+                        <div class="card-grid four-col">
                 <a href="pages/delivery.html" class="access-card">
                     <div class="card-icon orange"><i class="fas fa-truck"></i></div>
                     <div class="card-content">
@@ -117,6 +93,30 @@
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
                 </a>
+                <a href="pages/issue-resolution.html" class="access-card">
+                    <div class="card-icon purple"><i class="fas fa-bug"></i></div>
+                    <div class="card-content">
+                        <h3>Issue Resolution</h3>
+                        <p>Troubleshoot and resolve security issues with guided playbooks and workflows</p>
+                        <div class="card-meta">
+                            <span><i class="fas fa-user"></i> Ankit Varshney</span>
+                            <span><i class="fas fa-calendar"></i> Oct 31, 2025</span>
+                        </div>
+                    </div>
+                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
+                </a>
+                <a href="pages/playbooks.html" class="access-card">
+                    <div class="card-icon green"><i class="fas fa-book-open"></i></div>
+                    <div class="card-content">
+                        <h3>Playbooks, Decks, Videos & Training</h3>
+                        <p>MCS playbooks, presentation decks, and training videos for security services</p>
+                        <div class="card-meta">
+                            <span><i class="fas fa-user"></i> Geordie McGarty</span>
+                            <span><i class="fas fa-calendar"></i> Dec 2, 2024</span>
+                        </div>
+                    </div>
+                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
+                </a>
                 <a href="pages/resources.html#dashboards" class="access-card">
                     <div class="card-icon teal"><i class="fas fa-chart-bar"></i></div>
                     <div class="card-content">
@@ -129,7 +129,19 @@
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
                 </a>
-                <a href="pages/resources.html" class="access-card">
+                <a href="#" class="access-card">
+                    <div class="card-icon magenta"><i class="fas fa-robot"></i></div>
+                    <div class="card-content">
+                        <h3>AI Initiatives</h3>
+                        <p>MCS Agent, Copilot integrations, and AI-driven security automation projects</p>
+                        <div class="card-meta">
+                            <span><i class="fas fa-lightbulb"></i> Innovation</span>
+                            <span><i class="fas fa-calendar"></i> Feb 2026</span>
+                        </div>
+                    </div>
+                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
+                </a>
+                <a href="pages/resources.html" class="access-card resource-card">
                     <div class="card-icon blue"><i class="fas fa-folder-open"></i></div>
                     <div class="card-content">
                         <h3>Resources & Documents</h3>
@@ -141,84 +153,6 @@
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
                 </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Service Offerings -->
-    <section class="services-section">
-        <div class="section-container">
-            <div class="section-header">
-                <h2><i class="fas fa-shield-alt"></i> Security Service Offerings</h2>
-                <p>Comprehensive Mission Critical Services for Microsoft Security Cloud</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-shield-virus"></i></div>
-                    <h3>Microsoft Defender XDR</h3>
-                    <p>Extended detection and response across endpoints, identities, email, and cloud apps</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> Threat detection & response</li>
-                        <li><i class="fas fa-check"></i> Automated investigation</li>
-                        <li><i class="fas fa-check"></i> Cross-domain correlation</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-satellite-dish"></i></div>
-                    <h3>Microsoft Sentinel</h3>
-                    <p>Cloud-native SIEM with intelligent security analytics</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> Log collection & analytics</li>
-                        <li><i class="fas fa-check"></i> Threat hunting</li>
-                        <li><i class="fas fa-check"></i> SOAR capabilities</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-fingerprint"></i></div>
-                    <h3>Microsoft Entra ID</h3>
-                    <p>Identity and access management with advanced security</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> Conditional Access</li>
-                        <li><i class="fas fa-check"></i> Identity Protection</li>
-                        <li><i class="fas fa-check"></i> Privileged Identity Mgmt</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-cloud"></i></div>
-                    <h3>Defender for Cloud</h3>
-                    <p>Cloud security posture management and workload protection</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> CSPM</li>
-                        <li><i class="fas fa-check"></i> Workload protection</li>
-                        <li><i class="fas fa-check"></i> Regulatory compliance</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-envelope-open-text"></i></div>
-                    <h3>Defender for Office 365</h3>
-                    <p>Email threat protection and collaboration security</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> Anti-phishing</li>
-                        <li><i class="fas fa-check"></i> Safe Attachments</li>
-                        <li><i class="fas fa-check"></i> Threat investigation</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon-wrap"><i class="fas fa-lock"></i></div>
-                    <h3>Microsoft Purview</h3>
-                    <p>Data governance, compliance, and information protection</p>
-                    <ul class="service-features">
-                        <li><i class="fas fa-check"></i> Data loss prevention</li>
-                        <li><i class="fas fa-check"></i> Information protection</li>
-                        <li><i class="fas fa-check"></i> Insider risk management</li>
-                    </ul>
-                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
-                </div>
             </div>
         </div>
     </section>
