Remove Service Offerings & customer logos, update team: add Sherry Shao, Alessandra Liu, update roles

--- a/index.html
+++ b/index.html
@@ -156,42 +156,6 @@
             </div>
         </div>
     </section>
-    <!-- Trusted Customers -->
-    <section class="customers-section">
-        <div class="section-container">
-            <div class="section-header">
-                <h2><i class="fas fa-building"></i> Trusted by Leading Organizations</h2>
-                <p>Mission Critical Services customers across industries</p>
-            </div>
-            <div class="customer-logos">
-                <div class="customer-logo-item">
-                    <img src="https://logo.clearbit.com/nhs.uk" alt="NHS" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                    <div class="customer-logo-fallback" style="display:none"><span>NHS</span></div>
-                    <p>NHS</p>
-                </div>
-                <div class="customer-logo-item">
-                    <img src="https://logo.clearbit.com/usaa.com" alt="USAA" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                    <div class="customer-logo-fallback" style="display:none"><span>USAA</span></div>
-                    <p>USAA</p>
-                </div>
-                <div class="customer-logo-item">
-                    <img src="https://logo.clearbit.com/barclays.com" alt="Barclays" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                    <div class="customer-logo-fallback" style="display:none"><span>Barclays</span></div>
-                    <p>Barclays</p>
-                </div>
-                <div class="customer-logo-item">
-                    <img src="https://logo.clearbit.com/morganstanley.com" alt="Morgan Stanley" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                    <div class="customer-logo-fallback" style="display:none"><span>Morgan Stanley</span></div>
-                    <p>Morgan Stanley</p>
-                </div>
-                <div class="customer-logo-item">
-                    <img src="https://logo.clearbit.com/ey.com" alt="EY" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                    <div class="customer-logo-fallback" style="display:none"><span>EY</span></div>
-                    <p>EY</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
     <!-- Team & Leadership -->
@@ -225,17 +189,22 @@
                 <div class="team-card">
                     <div class="team-icon"><i class="fas fa-user-plus"></i></div>
                     <h3>Shalini Hada</h3>
-                    <p class="team-role">Customer Onboarding & Offboarding</p>
+                    <p class="team-role">Customer Onboarding & Service Improvement Plan</p>
                 </div>
                 <div class="team-card">
-                    <div class="team-icon"><i class="fas fa-file-contract"></i></div>
-                    <h3>Shalini</h3>
-                    <p class="team-role">Customer SIPs and CHR</p>
+                    <div class="team-icon"><i class="fas fa-compass"></i></div>
+                    <h3>Miky Munteanu</h3>
+                    <p class="team-role">Strategic Guidance</p>
                 </div>
                 <div class="team-card">
-                    <div class="team-icon"><i class="fas fa-lightbulb"></i></div>
-                    <h3>Miky</h3>
-                    <p class="team-role">Roadmap Insights & Early Adoption</p>
+                    <div class="team-icon"><i class="fas fa-robot"></i></div>
+                    <h3>Sherry Shao</h3>
+                    <p class="team-role">AI Initiatives</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-robot"></i></div>
+                    <h3>Alessandra Liu</h3>
+                    <p class="team-role">AI Initiatives</p>
                 </div>
             </div>
         </div>
