Fix AI Initiatives card to match other cards with owner name and date

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                         <h3>AI Initiatives</h3>
                         <p>MCS Agent, Copilot integrations, and AI-driven security automation projects</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-lightbulb"></i> Innovation</span>
-                            <span><i class="fas fa-calendar"></i> Feb 2026</span>
+                            <span><i class="fas fa-user"></i> Sherry Shao</span>
+                            <span><i class="fas fa-calendar"></i> Feb 12, 2026</span>
                         </div>
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
